--- a/complete-guide-dev/src/app/app.component.html
+++ b/complete-guide-dev/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1>
   {{title}}
   <app-other></app-other>
-  <app-another></app-another>
+  <app-another>Inhalt von außen mitgegeben</app-another>
 </h1>
