--- a/complete-guide-dev/src/app/app.component.html
+++ b/complete-guide-dev/src/app/app.component.html
@@ -1,5 +1,4 @@
 <h1>
   {{title}}
-  <app-other></app-other>
-  <app-another>Inhalt von außen mitgegeben</app-another>
 </h1>
+<app-databinding></app-databinding>
