--- a/complete-guide-dev/src/app/databinding/databinding.component.html
+++ b/complete-guide-dev/src/app/databinding/databinding.component.html
@@ -1,2 +1,13 @@
 {{text}}
 {{newNumber}}
+<hr>
+<h4>Property Binding</h4>
+<p [innerText]="text">
+</p>
+
+<div>
+  <input type="text" value="{{newNumber}}">
+</div>
+<div [ngClass]="{'red-border' : attacheClass}" [ngStyle] = "{'background-color': 'blue'}">
+  Text
+</div>
