--- a/complete-guide-dev/src/app/databinding/databinding.component.html
+++ b/complete-guide-dev/src/app/databinding/databinding.component.html
@@ -11,3 +11,4 @@
 <div [ngClass]="{'red-border' : attacheClass}" [ngStyle] = "{'background-color': 'blue'}">
   Text
 </div>
+<app-property-binding [name]="'Max'"></app-property-binding>
