--- a/complete-guide-dev/src/app/databinding/databinding.component.html
+++ b/complete-guide-dev/src/app/databinding/databinding.component.html
@@ -14,3 +14,4 @@
 <hr>
 <h4>Event Binding </h4>
 <button (click)="onClick($event)" >Click me </button>
+<app-event-binding (clickedEvent)="text=$event"></app-event-binding>
